<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPoint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:background="@android:color/white"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?android:selectableItemBackground"
            android:gravity="left|start|center_vertical"
            android:text="@string/title_origin"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivCompanyLogo"
            app:layout_constraintEnd_toStartOf="@+id/ivCompanyLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCompanyLogo"
            tools:text="Лондон(LON)" />

        <ImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/tvChangesValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDestination"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_origin" />

        <TextView
            android:id="@+id/tvDepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:gravity="start|left|center_vertical"
            android:text="@string/dep_time_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvChanges"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDestination" />

        <TextView
            android:id="@+id/tvDepTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvFlightNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDepTime"
            tools:text="10.10.2020 20:40" />

        <TextView
            android:id="@+id/tvReturnTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:text="@string/return_time_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDepTimeValue" />

        <TextView
            android:id="@+id/tvReturnTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReturnTime"
            tools:text="16.10.2020 13:45" />

        <TextView
            android:id="@+id/tvChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical|right|end"
            android:text="@string/changes_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvChangesValue"
            app:layout_constraintEnd_toStartOf="@+id/tvChangesValue"
            app:layout_constraintStart_toEndOf="@+id/tvDepTime"
            app:layout_constraintTop_toTopOf="@+id/tvChangesValue" />

        <TextView
            android:id="@+id/tvChangesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvFlightNumberValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCompanyLogo"
            tools:text="3" />

        <TextView
            android:id="@+id/tvFlightNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical|right|end"
            android:text="@string/flight_number_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFlightNumberValue"
            app:layout_constraintEnd_toStartOf="@+id/tvFlightNumberValue"
            app:layout_constraintStart_toEndOf="@+id/tvDepTimeValue"
            app:layout_constraintTop_toTopOf="@+id/tvFlightNumberValue" />

        <TextView
            android:id="@+id/tvFlightNumberValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangesValue"
            tools:text="8126" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:gravity="end|right|center_vertical"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvReturnTimeValue"
            app:layout_constraintTop_toBottomOf="@+id/tvFlightNumberValue"
            tools:text="4 180 Р" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>