<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPoint1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/title_origin"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivOrigin"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/pointDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/tvPoint2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvPoint1"
                    app:layout_constraintTop_toBottomOf="@+id/tvPoint1" />


                <TextView
                    android:id="@+id/tvPoint2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/title_destination"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivDestination"
                    app:layout_constraintTop_toBottomOf="@+id/tvPoint1" />

                <ImageView
                    android:id="@+id/ivOrigin"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_origin"
                    android:tint="@color/colorText"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toTopOf="@+id/ivDestination"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDestination"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_destination"
                    android:tint="@color/colorText"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivOrigin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvDate1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/title_flight"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivDate1"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dateDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/tvDate2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvDate1"
                    app:layout_constraintTop_toBottomOf="@+id/tvDate1" />


                <TextView
                    android:id="@+id/tvDate2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/add_return_flight"
                    android:textColor="@color/return_date_text_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/ivDate2Clear"
                    app:layout_constraintStart_toEndOf="@+id/ivDate2"
                    app:layout_constraintTop_toBottomOf="@+id/tvDate1" />

                <ImageView
                    android:id="@+id/ivDate1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_calendar1"
                    android:tint="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/ivDate2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDate2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_calendar2_disabled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivDate1" />

                <ImageView
                    android:id="@+id/ivDate2Clear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_date_clear"
                    android:tint="@color/colorText"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDate2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvDate2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            style="@style/Re.Button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/search_tickets" />

    </LinearLayout>

</FrameLayout>
